# Installed headers
install_headers(
  'cstring.h', 
  'meta_atomic.h', 
  'meta_sampler.h', 
  'meta_common.h', 
  'meta_ticker.h', 
  'meta_process.h', 
  'meta_slotbuf.h', 
  'meta_pool.h', 
  'meta_array.h', 
  'meta_list.h', 
  'meta_fifo.h', 
  'miscssl.h', 
  'gensocket.h', 
  'meta_membuf.h', 
  'meta_stack.h', 
  'meta_bitset.h', 
  'meta_misc.h', 
  'meta_cache.h', 
  'meta_configfile.h', 
  'meta_filecache.h', 
  'meta_regex.h', 
  'meta_stringmap.h', 
  'meta_map.h', 
  'connection.h', 
  'meta_pair.h', 
  'meta_error.h', 
  'meta_wlock.h', 
  'meta_convert.h', 
  'tcp_server.h', 
  'tcp_client.h', 
  'threadpool.h')

meta_inc = include_directories('.')
meta_lib = static_library('libmeta', [
	'meta_common.c',
	'meta_sampler.c',
	'meta_wlock.c',
	'meta_ticker.c',
	'meta_slotbuf.c',
	'meta_map.c',
	'meta_stack.c',
	'meta_bitset.c',
	'meta_process.c',
	'miscssl.c',
	'gensocket.c',
	'meta_error.c',
	'tcp_server.c',
	'tcp_client.c',
	'connection.c',
	'cstring.c',
	'meta_membuf.c',
	'meta_fifo.c',
	'meta_pair.c',
	'meta_array.c',
	'meta_misc.c',
	'meta_pool.c',
	'threadpool.c',
	'meta_configfile.c',
	'meta_cache.c',
	'meta_filecache.c',
	'meta_list.c',
	'meta_convert.c',
	'meta_regex.c',
	'meta_stringmap.c'
  ],
  install: true,
  include_directories: meta_inc,
  c_args: global_c_args
)

meta_dep = declare_dependency(
  link_with: meta_lib,
  include_directories: meta_inc,
)

